Updated dependencies and switched to Java 17